<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  <string name="wwApp">WW-Points-App</string>
    <string name="app_name">WW-Points-App</string>
    <string name="suchErgebnisse_name"> </string>
    <string name="berechung_name"> </string>
    
<!--     Texte -->
    <string name="lebensmittelsuche">Lebensmittel-Suche:</string>
    <string name="oderScannen">Oder Lebensmittel einscannen:</string>
    <string name="neueSuche">Neue Suche</string>
    <string name="augsewaehlterArtikel">Ausgewählter Artikel:</string>
    <string name="punkteBerechnen">Berechnen Sie hier die Punktzahl für eine abweichende Menge:</string>
    <string name="punkteWertBerechnet">Punkte-Wert:</string>
    <string name="ArtikelNichtGefunden">Der gesuchte Artikel wurde nicht gefunden!</string>
    <string name="menge">Menge:</string>
    <string name="einheit">Einheit:</string>
    <string name="punktzahl"> </string>
    <string name="ungueltigeEingabe">Ungültige Eingabe! \nBitte Gehirn benutzen! ;) </string>
    
<!--     Buttons -->
    <string name="suchen">suchen</string>
    <string name="zumScanner">Zum Barcode-Scanner</string>
    <string name="berechnen">berechnen</string>
    <string name="hauptSeite">zur Hauptseite</string>
    <string name="zurueck">zurück</string>
    
<!--     Eingabefelder -->
    <string name="hintTextMenge">Menge</string>
    <string name="hintText">Suchbegriff eingeben</string>
    
    <string name="teststring">Button geklickt</string>
    
    <string name="dbFehler">Fehler beim Verbindungsaufbau zur DB</string>
    <string name="dbAnlegenFehler">Fehler beim Anlegen der DB</string>

  <!-- Barcode Scanner -->
  <string name="app_picker_name">Anwendungen</string>
  <string name="bookmark_picker_name">Lesezeichen</string>
  <string name="button_add_calendar">Termin hinzufügen</string>
  <string name="button_add_contact">Kontakt hinzufügen</string>
  <string name="button_back">Zurück</string>
  <string name="button_book_search">Büchersuche</string>
  <string name="button_cancel">Abbruch</string>
  <string name="button_clipboard_empty">Zwischenablage löschen</string>
  <string name="button_custom_product_search">Benutzersuche</string>
  <string name="button_dial">Nummer wählen</string>
  <string name="button_done">Fertig</string>
  <string name="button_email">E-Mail senden</string>
  <string name="button_get_directions">Route berechnen</string>
  <string name="button_google_shopper">Google Shopper</string>
  <string name="button_mms">MMS senden</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Browser öffnen</string>
  <string name="button_product_search">Produktsuche</string>
  <string name="button_search_book_contents">Buchinhalt durchsuchen</string>
  <string name="button_share_app">Anwendung</string>
  <string name="button_share_bookmark">Lesezeichen</string>
  <string name="button_share_by_email">Als E-Mail weitergeben</string>
  <string name="button_share_by_sms">Als SMS weitergeben</string>
  <string name="button_share_clipboard">Zwischenablage</string>
  <string name="button_share_contact">Kontakt</string>
  <string name="button_show_map">Karte anzeigen</string>
  <string name="button_sms">SMS senden</string>
  <string name="button_web_search">Im Web suchen</string>
  <string name="button_wifi">Verbindung zum Netzwerk</string>
  <string name="contents_contact">Kontaktinfo</string>
  <string name="contents_email">E-Mail Adresse</string>
  <string name="contents_location">Koordinaten</string>
  <string name="contents_phone">Telefonnummer</string>
  <string name="contents_sms">SMS Adresse</string>
  <string name="contents_text">Text</string>
  <string name="history_clear_one_history_text">Löschen</string>
  <string name="history_clear_text">Historie löschen</string>
  <string name="history_email_title">Barcode Scanner Historie</string>
  <string name="history_empty">Leer</string>
  <string name="history_empty_detail">Kein Barcode-Scans wurden aufgezeichnet</string>
  <string name="history_send">Historie senden</string>
  <string name="history_title">Historie</string>
  <string name="menu_about">Info</string>
  <string name="menu_encode_mecard">Verwenden Sie MECARD</string>
  <string name="menu_encode_vcard">Verwenden Sie vCard</string>
  <string name="menu_help">Hilfe</string>
  <string name="menu_history">Historie</string>
  <string name="menu_settings">Einstellungen</string>
  <string name="menu_share">Senden</string>
  <string name="msg_about">Basiert auf der Open Source ZXing Barcode Bibliothek </string>
  <string name="msg_bulk_mode_scanned">Bulk-Modus: Barcode gescannt und gespeichert</string>
  <string name="msg_camera_framework_bug">Bei der Android-Kamera ist leider ein Fehler aufgetreten. Es könnte sein, dass Sie das Gerät neu starten müssen.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Positionieren Sie den Barcode innerhalb des Rechteckes.</string>
  <string name="msg_default_time">Zeit</string>
  <string name="msg_default_type">Typ</string>
  <string name="msg_encode_contents_failed">Aus den Daten kann kein Barcode erzeugt werden.</string>
  <string name="msg_google_books">Google Bücher</string>
  <string name="msg_google_product">Google Shopping</string>
  <string name="msg_google_shopper_missing">Google Shopper ist nicht installiert</string>
  <string name="msg_install_google_shopper">Google Shopper verbindet ohne Öffnen des Browsers Barcode-Scannen mit Preisen, Testberichten und mehr. Möchten Sie es ausprobieren?</string>
  <string name="msg_intent_failed">Die gewünschte Applikation kann nicht geöffnet werden. Der Barcode könnte ungültig sein.</string>
  <string name="msg_redirect">Umleiten</string>
  <string name="msg_sbc_book_not_searchable">Dieses Buch kann nicht durchsucht werden.</string>
  <string name="msg_sbc_failed">Bei der Suche ist ein Fehler aufgetreten.</string>
  <string name="msg_sbc_no_page_returned">Keine Seite zurückgeliefert.</string>
  <string name="msg_sbc_page">Seite</string>
  <string name="msg_sbc_searching_book">Durchsuche Buch\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Ausschnitt nicht verfügbar.</string>
  <string name="msg_sbc_unknown_page">Unbekannte Seite</string>
  <string name="msg_share_explanation">Sie können Daten weitergeben, indem Sie einen Barcode auf Ihrem Bilschirm anzeigen und mit einem anderen Telefon einscannen.</string>
  <string name="msg_share_subject_line">Hier ist der gescannte Barcode-Inhalt</string>
  <string name="msg_share_text">Oder geben Sie einen Text</string>
  <string name="msg_sure">Sind Sie sicher?</string>
  <string name="msg_unmount_usb">Leider kann nicht auf die SD-Karte zugegriffen werden.</string>
  <string name="preferences_actions_title">Wenn ein Barcode erkannt wurde\u2026</string>
  <string name="preferences_bulk_mode_summary">Scannt und speichert mehrere Barcodes nacheinander</string>
  <string name="preferences_bulk_mode_title">Bulk-Scan-Modus</string>
  <string name="preferences_copy_to_clipboard_title">In Zwischenablage kopieren</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Auswechslungen: %s = Inhalt, %f = Format,% t = Typ</string>
  <string name="preferences_custom_product_search_title">Eigene Such-URL</string>
  <string name="preferences_decode_1D_title">1D Barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_front_light_summary">Verbessert bei einigen Mobiltelefonen das Scannen bei schwachem Licht, kann aber Überbelichtung verursachen. Funktioniert nicht mit allen Handys.</string>
  <string name="preferences_front_light_title">Blitzlicht</string>
  <string name="preferences_general_title">Allgemeine Einstellungen</string>
  <string name="preferences_name">Einstellungen</string>
  <string name="preferences_play_beep_title">Piepsen</string>
  <string name="preferences_remember_duplicates_summary">Speichern mehrerer Scans des gleichen Barcodes in der Historie</string>
  <string name="preferences_remember_duplicates_title">Duplikate speichern</string>
  <string name="preferences_result_title">Ergebnis-Einstellungen</string>
  <string name="preferences_reverse_image_summary">Bei Geräten nur mit Frontkamera aktivieren</string>
  <string name="preferences_reverse_image_title">Umgekehrtes Kamerabild</string>
  <string name="preferences_scanning_title">Beim Scannen von Barcodes, dekodieren\u2026</string>
  <string name="preferences_search_country">Suche Land</string>
  <string name="preferences_supplemental_summary">Versuchen, weitere Informationen über Barcode-Inhalte abzurufen</string>
  <string name="preferences_supplemental_title">Weitere Informationen abrufen</string>
  <string name="preferences_vibrate_title">Vibrieren</string>
  <string name="result_address_book">Kontakt gefunden</string>
  <string name="result_calendar">Termin gefunden</string>
  <string name="result_email_address">E-Mail-Adresse gefunden</string>
  <string name="result_geo">Koordinaten gefunden</string>
  <string name="result_isbn">Buch gefunden</string>
  <string name="result_product">Produkt gefunden</string>
  <string name="result_sms">SMS-Adresse gefunden</string>
  <string name="result_tel">Telefonnummer gefunden</string>
  <string name="result_text">Text gefunden</string>
  <string name="result_uri">URL gefunden</string>
  <string name="result_wifi">WLAN-Konfiguration gefunden</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="share_name">Weitergabe mittels Barcode</string>
  <string name="title_about">Barcode Scanner v</string>
  <string name="wifi_changing_network">Anfordern Verbindung zum Netzwerk\u2026</string>
  <string name="wifi_ssid_label">Netzwerk-Name</string>
  <string name="wifi_type_label">Typ</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
</resources>
