<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/wwlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/wwApp"
            android:textColor="#3944a0"
            android:textSize="26dp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:text="@string/lebensmittelsuche"
        android:textColor="#3944a0"
        android:textSize="18dp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        
        
 <!--            android:imeActionId="@+id/actionOk"
            android:imeOptions="actionGo" -->
        <EditText
            android:id="@+id/suchFeldStartseite"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/hintText" />

        <Button
            android:id="@+id/suchenButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/suchen" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/oderScannen"
        android:textColor="#3944a0"
        android:textSize="18dp"
        android:typeface="serif" />

    <Button
        android:id="@+id/zumScannerButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/zumScanner" />

</LinearLayout>