<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/wwlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/augsewaehlterArtikel"
        android:textColor="#3944a0"
        android:textSize="18dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/ausgewaehltBezeichnung"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/border"
        android:textColor="#3944a0"
        android:textSize="18dp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/punkteBerechnen"
            android:textColor="#3944a0"
            android:textSize="18dp"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="60"
                    android:text="@string/menge"
                    android:textColor="#3944a0"
                    android:textSize="18dp"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/ausgewaehltMenge"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="90dp"
                    android:layout_weight="40"
                    android:hint="@string/hintTextMenge"
                    android:textColor="#3944a0"
                    android:textSize="20dp"
                    android:typeface="serif"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="60"
                    android:text="@string/einheit"
                    android:textColor="#3944a0"
                    android:textSize="18dp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/ausgewaehltEinheit"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="15dp"
                    android:layout_weight="40"
                    android:text="Stück"
                    android:textColor="#3944a0"
                    android:textSize="22dp"
                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/berechnenButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/berechnen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="60"
            android:text="@string/punkteWertBerechnet"
            android:textColor="#3944a0"
            android:textSize="18dp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/ausgewaehltPunktzahl"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_weight="40"
            android:text="@string/punktzahl"
            android:textColor="#3944a0"
            android:textSize="22dp"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/hauptSeiteButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/hauptSeite" />
    </LinearLayout>

</LinearLayout>