<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/wwlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/neueSuche"
        android:textColor="#3944a0"
        android:textSize="18dp"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/neueSucheFeld"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:hint="@string/hintText" />

        <Button
            android:id="@+id/neuSuchenButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/suchen" />
    </LinearLayout>

    <ListView
        android:id="@+id/suchErgebnisListe"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border"
        android:cacheColorHint="#00000000"
        android:textColor="#3944a0"
        android:textSize="18dp" />

</LinearLayout>